Add about texts

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Waleed Saleh. It uses data from mapbox.com and not from dark sky</p>
         <img class='portrait' src="/img/me-on-tank.jpg" alt="Me on a tank!">
     </div>
     {{>footer}}
